# meteorological-station

./: CMakeLists.txt  README.md  main.c
libs/include/: globals.h  lwipopts.h  tasks.h  wifi.h
libs/include/ssd1306/: font.h  ssd1306.h
libs/source/: server.c  ssd1306.c
libs/source/tasks/: alert_task.c  display_task.c  sensors_task.c  wifi_task.c
